# stream-ciphers

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
asm-macros/: Cargo.toml
asm-macros/src/: lib.rs
c/: Makefile  main.c
chacha20/: Cargo.toml  expanded.rs
chacha20/src/: backends.rs  lib.rs
chacha20/src/backends/: pulp.rs  soft.rs
cipher-suite/: Cargo.toml
cipher-suite/src/: lib.rs
pulp-wrapper/: Cargo.toml
pulp-wrapper/src/: buf.rs  cluster.rs  lib.rs
