[workspace]
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
    "pulp-wrapper",
    "cipher-suite",
]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
debug = true

[patch.crates-io]
inout = { git = 'https://github.com/Zeegomo/utils', rev = "31988bc5b666f98747eb8521ce9d20f4b9a4419a" }
