[workspace]
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
    "pulp-wrapper",
    "cipher-suite",
    "asm-macros",
    "tmp",
]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
debug = true

[patch.crates-io]
inout = { git = 'https://github.com/Zeegomo/utils', rev = "20836f85a4f21e761d52f220dd7790c9f9ddb4d2" }
