[workspace]
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
    "pulp-wrapper",
    "cipher-suite",
    "asm-macros",
    "tmp",
]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
debug = true

[patch.crates-io]
inout = { git = 'https://github.com/Zeegomo/utils', rev = "a2d07d0ebf4a6f9f2daf4b5a7a534148eb542b64" }
